Clean database for gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ build/
 
 src/main/python/MDPDatabase/MDPDatabase.sqlite
 src/main/python/MDPDatabase/MDPdatabase.sqlite
+src/main/python/MDPDatabase/MDPDatabase.sqlite
+src/main/python/MDPDatabase/MDPDatabase.sqlite
