--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 target/
 venv/
 .env/
+.idea/
 
 *.pyc
 __pycache__/
@@ -15,7 +16,4 @@ dist/
 build/
 *.egg-info/
 
-src/main/python/MDPDatabase/MDPDatabase.sqlite
-src/main/python/MDPDatabase/MDPdatabase.sqlite
-src/main/python/MDPDatabase/MDPDatabase.sqlite
-src/main/python/MDPDatabase/MDPDatabase.sqlite
+*.sqlite
